integration/tests/error_assert_template_variable_not_found.err
error: Undefined Variable
  --> tests/error_assert_template_variable_not_found.hurl:4:33
   |
 4 | header "content-type" equals "{{content_type}}"
   |                                 ^^^^^^^^^^^^ You must set the variable content_type
   |

